Fix bug on ios

--- a/styles/language-showcase.css
+++ b/styles/language-showcase.css
@@ -288,7 +288,7 @@
 
   .language {
     height: calc(4vw + 40%);
-    line-height: calc(2.8vw + 140%);
+    line-height: calc(3.1vw + 140%);
   }
 
   .language > p {
